--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,7 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = '/api'
 
-# 设置端口号
+#定义服务启动的端口 不要在端口号后面加空格
 port = 8888
+
+#因为这个文件没有代码逻辑  不管是谁 都可以改这个文件里的数据 好维护
